--- a/src/features/sqlResults/styles/Result.css
+++ b/src/features/sqlResults/styles/Result.css
@@ -72,7 +72,7 @@
   color: rgba(255, 255, 255, 0.7);
 }
 
-@media (max-width: var(--mobile-breakpoint)) {
+@media (max-width: 950px) {
   .result {
     min-height: 250px;
   }
@@ -112,7 +112,7 @@
   }
 }
 
-@media (max-width: var(--small-mobile-breakpoint)) {
+@media (max-width: 480px) {
   .table-cell {
     max-width: 100px;
     font-size: 0.8rem;
@@ -130,7 +130,7 @@
   }
 
   .MuiTable-root {
-    min-width: 400px;
+    min-width: 400vw;
   }
 
   .MuiTablePagination-toolbar {
