--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,8 +1,3 @@
-:root {
-  --mobile-breakpoint: 950px;
-  --small-mobile-breakpoint: 480px;
-}
-
 .wrapper {
   display: grid;
   grid-template: 1fr 1fr / 0.3fr 1fr;
@@ -24,7 +19,7 @@
   grid-area: 2 / 2 / 3 / 3;
 }
 
-@media (max-width: var(--mobile-breakpoint)) {
+@media (max-width: 950px) {
   .wrapper {
     grid-template: auto auto / 1fr;
     height: auto;
@@ -50,7 +45,7 @@
   }
 }
 
-@media (max-width: var(--small-mobile-breakpoint)) {
+@media (max-width: 480px) {
   .wrapper {
     gap: 0.3rem;
   }
